WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
84613
Insert source file and line number for v8 function calls into tracing
https://bugs.webkit.org/show_bug.cgi?id=84613
Summary
Insert source file and line number for v8 function calls into tracing
Adrienne Walker
Reported
2012-04-23 10:45:47 PDT
Insert source file and line number for v8 function calls into tracing
Attachments
Patch
(4.14 KB, patch)
2012-04-23 10:46 PDT
,
Adrienne Walker
no flags
Details
Formatted Diff
Diff
Patch
(3.79 KB, patch)
2012-05-16 16:35 PDT
,
Adrienne Walker
haraken
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Adrienne Walker
Comment 1
2012-04-23 10:46:39 PDT
Created
attachment 138381
[details]
Patch
Adrienne Walker
Comment 2
2012-05-15 16:56:30 PDT
Do any of y'all know who the right person to review this would be?
Kentaro Hara
Comment 3
2012-05-15 17:13:36 PDT
Comment on
attachment 138381
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=138381&action=review
> Source/WebCore/ChangeLog:7 > +
Please explain the rational for the change.
> Source/WebCore/bindings/v8/V8Proxy.cpp:435 > + Vector<UChar> combine; > + append(combine, resourceName); > + combine.append(':'); > + appendNumber(combine, lineNumber); > + > + String final; > + final = String::adopt(combine); > + return final;
Shall we use StringBuilder?
> Source/WebCore/platform/chromium/TraceEvent.h:677 > + explicit TraceStringWithCopy(const unsigned char* str) : m_str(reinterpret_cast<const char*>(str)) { }
What is this change for?
Adrienne Walker
Comment 4
2012-05-16 16:35:49 PDT
Created
attachment 142369
[details]
Patch
Adrienne Walker
Comment 5
2012-05-16 16:36:06 PDT
(In reply to
comment #3
)
> (From update of
attachment 138381
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=138381&action=review
> > > Source/WebCore/ChangeLog:7 > > + > > Please explain the rational for the change.
Done.
> > Source/WebCore/bindings/v8/V8Proxy.cpp:435 > > + Vector<UChar> combine; > > + append(combine, resourceName); > > + combine.append(':'); > > + appendNumber(combine, lineNumber); > > + > > + String final; > > + final = String::adopt(combine); > > + return final; > > Shall we use StringBuilder?
Done.
> > Source/WebCore/platform/chromium/TraceEvent.h:677 > > + explicit TraceStringWithCopy(const unsigned char* str) : m_str(reinterpret_cast<const char*>(str)) { } > > What is this change for?
It looks like this is no longer needed. Removed.
Kentaro Hara
Comment 6
2012-05-16 17:44:11 PDT
Comment on
attachment 142369
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=142369&action=review
Looks OK
> Source/WebCore/bindings/v8/V8Proxy.cpp:412 > + builder.append(String::String::number(lineNumber));
String::String::number() => String::number()
Adrienne Walker
Comment 7
2012-05-17 11:22:10 PDT
Committed
r117466
: <
http://trac.webkit.org/changeset/117466
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug