Insert source file and line number for v8 function calls into tracing https://bugs.webkit.org/show_bug.cgi?id=84613

Reviewed by Kentaro Hara.

The trace for v8 function calls doesn't include any information about
what function is being called. Pass this information along so it can
be less opaque.

* bindings/v8/V8Proxy.cpp:
(WebCore::resourceInfo):
(WebCore):
(WebCore::resourceString):
(WebCore::V8Proxy::instrumentedCallFunction):
* platform/chromium/TraceEvent.h:
(WebCore::TraceEvent::TraceStringWithCopy::TraceStringWithCopy):

git-svn-id: svn://svn.chromium.org/blink/trunk@117466 bbb929c8-8fbe-4397-9dbb-9b2b20218538